Fix screen overflow for small devices

--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,10 @@ body {
 	background-color: #27272a;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 ::-webkit-scrollbar {
 	width: 10px;
 }
